# finmars-core

./: .gitlab-ci.yml  Makefile  README.md  docker-compose-stage.yml  docker-compose.yml  file_report_2025-01-21-18-33_task_15.json  file_report_2025-01-21-18-33_task_16.json  file_report_2025-01-21-18-33_task_19.json  file_report_2025-01-21-18-34_task_101.csv  file_report_2025-01-21-18-34_task_101.json  file_report_2025-01-21-18-43_task_10.json  file_report_2025-01-21-18-43_task_11.csv  file_report_2025-01-21-18-43_task_20.csv  file_report_2025-01-21-18-43_task_20.json  file_report_2025-01-21-18-43_task_24.json  file_report_2025-01-21-18-44_task_101.csv  file_report_2025-01-21-18-44_task_101.json  file_report_2025-01-21-18-52_task_101.csv  file_report_2025-01-21-18-52_task_101.json  file_report_2025-01-22-18-34_task_11.json  file_report_2025-01-22-18-34_task_14.csv  file_report_2025-01-22-18-34_task_14.json  file_report_2025-01-22-18-34_task_15.csv  file_report_2025-01-22-18-36_task_101.csv  file_report_2025-01-22-18-36_task_101.json  file_report_2025-01-22-18-40_task_19.csv  file_report_2025-01-22-18-40_task_26.json  file_report_2025-01-22-18-41_task_101.csv  file_report_2025-01-22-18-41_task_101.json  file_report_2025-01-22-18-45_task_10.csv  file_report_2025-01-22-18-45_task_26.csv  file_report_2025-01-22-18-46_task_101.csv  file_report_2025-01-22-18-46_task_101.json  manage.py  pyproject.toml  reconciliation_report_2024-12-28-16-55_task_1467.json  reconciliation_report_2024-12-28-17-21_task_1476.json  requirements-dev.txt  requirements-test.txt  requirements.txt
(+293 files in other folders)
