[project]
name = "finmars-backend"
version = "1.15.0"

[tool.black]
line-length = 116
target-version = ["py311"]

[tool.isort]
profile="black"
py_version=311
known_django=[
    "django",
    "django_celery_results",
    "django_celery_beat",
    "django_filters",
    "django_redis",
    "rest_framework",
    "rest_framework_simplejwt",
    "drf_yasg",
    "corsheaders"
]
sections=["STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
skip=["__init__.py", ".gitignore", "templates"]
skip_glob=["venv/*"]

[tool.ruff]
target-version = "py311"
line-length = 116
lint.select = ["E4", "E7", "E9", "C90", "C901", "W", "F"]
lint.ignore = ["E501", "F403", "F405", "W605"]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
source = ["backend"]

[tool.coverage.report]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"
title = "Backend Coverage Report"
